--- a/server/package.json
+++ b/server/package.json
@@ -24,11 +24,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
-    "mysql2": "^3.6.2",
+    "@nestjs/typeorm": "^10.0.0",
+    "mysql2": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "sequelize": "^6.33.0",
-    "sequelize-typescript": "^2.1.5"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
